--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -11,76 +11,76 @@
 # even the implied warranty of MERCHANTABILITY or FITNESS FOR A
 # PARTICULAR PURPOSE.
 
+@SET_MAKE@
 
+SHELL = @SHELL@
 
-SHELL = /bin/sh
+srcdir = @srcdir@
+top_srcdir = @top_srcdir@
+VPATH = @srcdir@
+prefix = @prefix@
+exec_prefix = @exec_prefix@
 
-srcdir = .
-top_srcdir = ..
-
-prefix = /usr/local
-exec_prefix = ${prefix}
-
-bindir = ${exec_prefix}/bin
-sbindir = ${exec_prefix}/sbin
-libexecdir = ${exec_prefix}/libexec
-datadir = ${prefix}/share
-sysconfdir = ${prefix}/etc
-sharedstatedir = ${prefix}/com
-localstatedir = ${prefix}/var
-libdir = ${exec_prefix}/lib
-infodir = ${prefix}/info
-mandir = ${prefix}/man
-includedir = ${prefix}/include
+bindir = @bindir@
+sbindir = @sbindir@
+libexecdir = @libexecdir@
+datadir = @datadir@
+sysconfdir = @sysconfdir@
+sharedstatedir = @sharedstatedir@
+localstatedir = @localstatedir@
+libdir = @libdir@
+infodir = @infodir@
+mandir = @mandir@
+includedir = @includedir@
 oldincludedir = /usr/include
-pkgdatadir = $(datadir)/lclint
-pkglibdir = $(libdir)/lclint
-pkgincludedir = $(includedir)/lclint
+pkgdatadir = $(datadir)/@PACKAGE@
+pkglibdir = $(libdir)/@PACKAGE@
+pkgincludedir = $(includedir)/@PACKAGE@
 top_builddir = ..
 
-ACLOCAL = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run aclocal
-AUTOCONF = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run autoconf
-AUTOMAKE = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run automake
-AUTOHEADER = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run autoheader
+ACLOCAL = @ACLOCAL@
+AUTOCONF = @AUTOCONF@
+AUTOMAKE = @AUTOMAKE@
+AUTOHEADER = @AUTOHEADER@
 
-INSTALL = /usr/bin/install -c
-INSTALL_PROGRAM = ${INSTALL}
-INSTALL_DATA = ${INSTALL} -m 644
-INSTALL_SCRIPT = ${INSTALL}
+INSTALL = @INSTALL@
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
+INSTALL_DATA = @INSTALL_DATA@
+INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_HEADER = $(INSTALL_DATA)
-transform = s,x,x,
+transform = @program_transform_name@
 NORMAL_INSTALL = :
 PRE_INSTALL = :
 POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-host_alias = 
-host_triplet = i686-pc-linux-gnu
-AMTAR = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run tar
-AWK = gawk
-BISON = bison
-CAT = cat
-CC = gcc
-CP = cp
-CPP = gcc -E
-CXX = g++
-DEPDIR = .deps
-DIFF = diff
-EXEEXT = 
-GREP = grep
-INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
-LCLOBJ = $(lcl_OBJECTS)
-LEX = flex
-LN_S = ln -s
-MV = mv
-OBJEXT = o
-PACKAGE = lclint
-RM = rm
-VERSION = 3.0.0.19
-am__include = include
-am__quote = 
-install_sh = /net/af10/evans/LCLintDev/config/install-sh
+host_alias = @host_alias@
+host_triplet = @host@
+AMTAR = @AMTAR@
+AWK = @AWK@
+BISON = @BISON@
+CAT = @CAT@
+CC = @CC@
+CP = @CP@
+CPP = @CPP@
+CXX = @CXX@
+DEPDIR = @DEPDIR@
+DIFF = @DIFF@
+EXEEXT = @EXEEXT@
+GREP = @GREP@
+INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
+LCLOBJ = @LCLOBJ@
+LEX = @LEX@
+LN_S = @LN_S@
+MV = @MV@
+OBJEXT = @OBJEXT@
+PACKAGE = @PACKAGE@
+RM = @RM@
+VERSION = @VERSION@
+am__include = @am__include@
+am__quote = @am__quote@
+install_sh = @install_sh@
 
 AUTOMAKE_OPTIONS = 1.5 foreign
 
