Fixed test suite (temporarily) to run nested test cases

--- a/src/Makefile
+++ b/src/Makefile
@@ -867,6 +867,15 @@ Headers/flag_codes.gen: flags.def
 nocheck:
 	$(MAKE) CHECK=0
 
+.PHONY: test
+test:
+	cd ../; ${MAKE} check
+
+### Automake generates wrong tags
+.PHONY: etags
+etags:
+	maketags
+
 lintnew: 
 	./lclint -f lclint.lclintrc $(DEFAULT_INCLUDES) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) +singleinclude $(ALLSRC) $(LCLSRC) -dump lclint \
                     +forcehints -misplacedsharequal +showsourceloc -unrecogcomments \
