--- a/test/Makefile
+++ b/test/Makefile
@@ -86,10 +86,10 @@ AUTOMAKE_OPTIONS = 1.5 foreign
 
 DIFFFLAGS = -u
 
-LCLINT = $(top_builddir)/bin/lclint$(EXEEXT)
+LCLINT = $(top_builddir)/src/lclint$(EXEEXT)
 
 ### This is horrible!  Can't we make top_builddir absolute?
-LCLINTNEST = ../$(top_builddir)/bin/lclint$(EXEEXT)
+LCLINTNEST = ../$(top_builddir)/src/lclint$(EXEEXT)
 
 LCLINTPNEST = @$(LCLINTNEST)
 LCLINTP = @$(LCLINT)
