--- a/test/Makefile
+++ b/test/Makefile
@@ -38,10 +38,10 @@ pkglibdir = $(libdir)/lclint
 pkgincludedir = $(includedir)/lclint
 top_builddir = ..
 
-ACLOCAL = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run aclocal
-AUTOCONF = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run autoconf
-AUTOMAKE = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run automake
-AUTOHEADER = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run autoheader
+ACLOCAL = ${SHELL} /tmp/LCLintDev/config/missing --run aclocal
+AUTOCONF = ${SHELL} /tmp/LCLintDev/config/missing --run autoconf
+AUTOMAKE = ${SHELL} /tmp/LCLintDev/config/missing --run automake
+AUTOHEADER = ${SHELL} /tmp/LCLintDev/config/missing --run autoheader
 
 INSTALL = /usr/bin/install -c
 INSTALL_PROGRAM = ${INSTALL}
@@ -57,8 +57,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 host_alias = 
 host_triplet = i686-pc-linux-gnu
-AMTAR = ${SHELL} /net/af10/evans/LCLintDev/config/missing --run tar
-AWK = gawk
+AMTAR = ${SHELL} /tmp/LCLintDev/config/missing --run tar
+AWK = mawk
 BISON = bison
 CAT = cat
 CC = gcc
@@ -80,7 +80,7 @@ RM = rm
 VERSION = 3.0.0.19
 am__include = include
 am__quote = 
-install_sh = /net/af10/evans/LCLintDev/config/install-sh
+install_sh = /tmp/LCLintDev/config/install-sh
 
 AUTOMAKE_OPTIONS = 1.5 foreign
 
