Made some additional changes to the makefile.  Now it builds correctly.
Although the binary isn't copied to bin.

--- a/imports/Makefile
+++ b/imports/Makefile
@@ -58,7 +58,7 @@ POST_UNINSTALL = :
 host_alias = 
 host_triplet = i686-pc-linux-gnu
 AMTAR = ${SHELL} /tmp/LCLintDev/config/missing --run tar
-AWK = mawk
+AWK = gawk
 BISON = bison
 CAT = cat
 CC = gcc
