Took tests2.2a out of Makefile temporalily.

--- a/src/Makefile
+++ b/src/Makefile
@@ -416,7 +416,7 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
-CFLAGS = -g
+CFLAGS = -g -O2
 DIST_SOURCES = $(lcl_SOURCES) $(lclint_SOURCES)
 DIST_COMMON = Makefile.am Makefile.in
 SOURCES = $(lcl_SOURCES) $(lclint_SOURCES)
