--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -92,7 +92,7 @@ CHECK = 1
 # Some preferences
 YFLAGS = -v -t -d --debug
 
-EXTRA_DIST = DATE
+BISON_SRC = cgrammar.y  llgrammar.y  mtgrammar.y  signature.y
 
 bin_PROGRAMS = lclint
 
@@ -172,12 +172,164 @@ LCLLISTSRC = initDeclNodeList.c sortList.c declaratorInvNodeList.c \
              replaceNodeList.c importNodeList.c
 
 
+HEADERSRC = Headers/abstBodyNode.h           Headers/ltokenList.h \
+          Headers/abstract.h               Headers/macrocache.h \
+          Headers/abstractNode.h           Headers/mapping.h \
+          Headers/aliasChecks.h            Headers/message.h \
+          Headers/aliasStack.h             Headers/messageLog.h \
+          Headers/aliasTable.h             Headers/metaStateConstraint.h \
+          Headers/annotationInfo.h         Headers/metaStateConstraintList.h \
+          Headers/annotationTable.h        Headers/metaStateExpression.h \
+          Headers/arrayQualNode.h          Headers/metaStateInfo.h \
+          Headers/basic.h                  Headers/metaStateSpecifier.h \
+          Headers/bool.h                   Headers/metaStateTable.h \
+          Headers/boolStack.h              Headers/misc.h \
+          Headers/cgrammar.h               Headers/modifiesClause.h \
+          Headers/cgrammar_tokens.h        Headers/modifyNode.h \
+          Headers/checking.h               Headers/mtAnnotationDecl.h \
+          Headers/clabstract.h             Headers/mtAnnotationList.h \
+          Headers/claimNode.h              Headers/mtAnnotationsNode.h \
+          Headers/clause.h                 Headers/mtContextNode.h \
+          Headers/clauseStack.h            Headers/mtDeclarationNode.h \
+          Headers/code.h                   Headers/mtDeclarationPiece.h \
+          Headers/constants.h              Headers/mtDeclarationPieces.h \
+          Headers/constDeclarationNode.h   Headers/mtDefaultsDecl.h \
+          Headers/constraintExprData.h     Headers/mtDefaultsDeclList.h \
+          Headers/constraintExpr.h         Headers/mtDefaultsNode.h \
+          Headers/constraint.h             Headers/mtgrammar.h \
+          Headers/constraintList2.h        Headers/mtgrammar.tab.h \
+          Headers/constraintList.h         Headers/mtgrammar_tokens.h \
+          Headers/constraintOutput.h       Headers/mtincludes.h \
+          Headers/constraintResolve.h      Headers/mtLoseReference.h \
+          Headers/constraintTerm.h         Headers/mtLoseReferenceList.h \
+          Headers/context.h                Headers/mtMergeClause.h \
+          Headers/cpperror.h               Headers/mtMergeClauseList.h \
+          Headers/cppexp.h                 Headers/mtMergeItem.h \
+          Headers/cpp.h                    Headers/mtMergeNode.h \
+          Headers/cpphash.h                Headers/mtreader.h \
+          Headers/cpplib.h                 Headers/mtscanner.h \
+          Headers/cprim.h                  Headers/mttok.h \
+          Headers/cscanner.h               Headers/mtTransferAction.h \
+          Headers/cstring.h                Headers/mtTransferClause.h \
+          Headers/cstringList.h            Headers/mtTransferClauseList.h \
+          Headers/cstringSList.h           Headers/mtValuesNode.h \
+          Headers/cstringTable.h           Headers/multiVal.h \
+          Headers/ctokens.h                Headers/nameChecks.h \
+          Headers/ctypeList.h              Headers/nameNode.h \
+          Headers/CTypesNode.h             Headers/opFormNode.h \
+          Headers/cvar.h                   Headers/osd.h \
+          Headers/declaratorInvNode.h      Headers/pairNode.h \
+          Headers/declaratorInvNodeList.h  Headers/pairNodeList.h \
+          Headers/declaratorNode.h         Headers/paramNode.h \
+          Headers/declaratorNodeList.h     Headers/paramNodeList.h \
+          Headers/dmalloc.h                Headers/portab.h \
+          Headers/ekind.h                  Headers/pp.h \
+          Headers/enumNameList.h           Headers/privateNode.h \
+          Headers/enumNameSList.h          Headers/programNode.h \
+          Headers/enumSpecNode.h           Headers/programNodeList.h \
+          Headers/exportNode.h             Headers/qtype.h \
+          Headers/exposedNode.h            Headers/qual.h \
+          Headers/exprChecks.h             Headers/qualList.h \
+          Headers/exprData.h               Headers/quantifiedTermNode.h \
+          Headers/exprNode.h               Headers/quantifierNode.h \
+          Headers/exprNodeList.h           Headers/quantifierNodeList.h \
+          Headers/exprNodeSList.h          Headers/randomNumbers.h \
+          Headers/fcnNode.h                Headers/rangeTable.h \
+          Headers/fcnNodeList.h            Headers/reader.h \
+          Headers/fileId.h                 Headers/refTable-branch.h \
+          Headers/fileIdList.h             Headers/renamingNode.h \
+          Headers/fileLib.h                Headers/replaceNode.h \
+          Headers/fileloc.h                Headers/replaceNodeList.h \
+          Headers/filelocList.h            Headers/scan.h \
+          Headers/filelocStack.h           Headers/scanline.h \
+          Headers/fileTable.h              Headers/sgrammar_tokens.h \
+          Headers/flag_codes.h             Headers/sHerald.h \
+          Headers/flagMarker.h             Headers/shift.h \
+          Headers/flagMarkerList.h         Headers/signature2.h \
+          Headers/flags.h                  Headers/signature_gen.h \
+          Headers/flagSpec.h               Headers/signature.h \
+          Headers/forwardTypes.h           Headers/signNode.h \
+          Headers/functionClause.h         Headers/sigNode.h \
+          Headers/functionClauseList.h     Headers/sigNodeSet.h \
+          Headers/functionConstraint.h     Headers/sort.h \
+          Headers/general.h                Headers/sortList.h \
+          Headers/genericTable.h           Headers/sortSet.h \
+          Headers/globalList.h             Headers/sortSetList.h \
+          Headers/globalsClause.h          Headers/source.h \
+          Headers/globals.h                Headers/specialClauses.h \
+          Headers/globSet.h                Headers/sRef.h \
+          Headers/gram.h                   Headers/sRefList.h \
+          Headers/guardSet.h               Headers/sRefSet.h \
+          Headers/handle.h                 Headers/sRefSetList.h \
+          Headers/hashTable.h              Headers/sRefSetStack.h \
+          Headers/idDecl.h                 Headers/sRefTable.h \
+          Headers/idDeclList.h             Headers/stateClause.h \
+          Headers/importNode.h             Headers/stateClauseList.h \
+          Headers/importNodeList.h         Headers/stateCombinationTable.h \
+          Headers/imports.h                Headers/stateInfo.h \
+          Headers/initDeclNode.h           Headers/stateValue.h \
+          Headers/initDeclNodeList.h       Headers/stDeclNode.h \
+          Headers/inputStream.h            Headers/stDeclNodeList.h \
+          Headers/interfaceNode.h          Headers/stmtNode.h \
+          Headers/interfaceNodeList.h      Headers/storeRefNode.h \
+          Headers/intSet.h                 Headers/storeRefNodeList.h \
+          Headers/intTable.h               Headers/strOrUnionNode.h \
+          Headers/iterNode.h               Headers/structNames.h \
+          Headers/lcl_constants.h          Headers/symtable.h \
+          Headers/lclctypes.h              Headers/syntable.h \
+          Headers/lclForwardTypes.h        Headers/system_constants.h \
+          Headers/lclinit.h                Headers/taggedUnionNode.h \
+          Headers/lcllib.h                 Headers/termNode.h \
+          Headers/lclMisc.h                Headers/termNodeList.h \
+          Headers/lclPredicateNode.h       Headers/tmpname.h \
+          Headers/lclscan.h                Headers/tokentable.h \
+          Headers/lclscanline.h            Headers/traitRefNode.h \
+          Headers/lclsyntable.h            Headers/traitRefNodeList.h \
+          Headers/lcltokentable.h          Headers/transferChecks.h \
+          Headers/lclTypeSpecNode.h        Headers/typeExpr.h \
+          Headers/lctype.h                 Headers/typeIdSet.h \
+          Headers/letDeclNode.h            Headers/typeNameNode.h \
+          Headers/letDeclNodeList.h        Headers/typeNameNodeList.h \
+          Headers/lh.h                     Headers/typeNamePack.h \
+          Headers/limwr.h                  Headers/typeNode.h \
+          Headers/llbasic.h                Headers/uentry.h \
+          Headers/llerror.h                Headers/uentryList.h \
+          Headers/llglobals.h              Headers/usymId.h \
+          Headers/llgrammar2.h             Headers/usymIdSet.h \
+          Headers/llgrammar_gen2.h         Headers/usymtab-branch.h \
+          Headers/llgrammar_gen.h          Headers/usymtab.h \
+          Headers/llgrammar.h              Headers/usymtab_interface.h \
+          Headers/llmain.h                 Headers/valueMatrix.h \
+          Headers/lltok.h                  Headers/valueTable.h \
+          Headers/lslinit.h                Headers/varDeclarationNode.h \
+          Headers/lslOp.h                  Headers/varDeclarationNodeList.h \
+          Headers/lslOpList.h              Headers/varKinds.h \
+          Headers/lslOpSet.h               Headers/varNode.h \
+          Headers/lslparse.h               Headers/varNodeList.h \
+          Headers/lsymbol.h                Headers/version.h \
+          Headers/lsymbolList.h            Headers/warnClause.h \
+          Headers/lsymbolSet.h             Headers/ynm.h \
+          Headers/ltoken.h   Headers/lclintMacros.nf  
+
+
+IFILES = ctbase.i  cttable.i  exprDataQuite.i
+
+EXTRA_DIST = DATE $(BISON_SRC) bison.head bison.reset $(HEADERSRC) flags.def cscanner.l flex.head flex.reset $(IFILES)
+
+#Files that are used on systems that do not have bison or yacc
+DER_BISON_FILES = signature.c.der  cgrammar.c.der  mtgrammar.c.der \
+                  llgrammar.c.der 
+
+DER_FILES = $(DER_BISON_FILES)
+
 COMMONSRC = $(OVERFLOWCHSRC) $(CPPSRC) $(CSRC) $(CHECKSRC) $(GENERALSRC) \
             $(GLOBSRC) $(IFACESRC) $(LISTSRC) $(SETSRC) $(METASTATESRC)
 
 
-ALLSRC = $(GRAMSRC) $(COMMONSRC) $(LCLINTSRC)
+ALLSRC = $(GRAMSRC) $(COMMONSRC) $(LCLINTSRC) $(DER_FILES) $(HEADERSRC)
 
+
+#ALLSRC = $(COMMONSRC) $(LCLINTSRC) $(DER_FILES) $(HEADERSRC)
 LCLSRC = $(LCLSETSRC) $(LCLLISTSRC) $(LSLSRC) $(CMNSRC) $(LCLONLYSRC) \
          $(LCLGRAMSRC)
 
@@ -193,7 +345,8 @@ lclint_DEPENDENCIES = $(LCLOBJ)
 BUILT_SOURCES = Headers/signature_gen.h Headers/cgrammar_tokens.h \
                 Headers/llgrammar_gen.h Headers/llgrammar_gen2.h \
                 Headers/mtgrammar_tokens.h signature.c cgrammar.c \
-                llgrammar.c mtgrammar.c Headers/flag_codes.gen
+                llgrammar.c mtgrammar.c Headers/flag_codes.gen \
+                $(DER_FILES)
 
 
 CHECKS = $(subst .c,.check,$(lclint_SOURCES))
@@ -704,6 +857,7 @@ top_distdir = ..
 distdir = $(top_distdir)/$(PACKAGE)-$(VERSION)
 
 distdir: $(DISTFILES)
+	$(mkinstalldirs) $(distdir)/Headers
 	@for file in $(DISTFILES); do \
 	  if test -f $$file; then d=.; else d=$(srcdir); fi; \
 	  dir=`echo "$$file" | sed -e 's,/[^/]*$$,,'`; \
@@ -812,6 +966,7 @@ Headers/signature_gen.h signature.c: signature.c.der signature.y
 	else \
 	  $(BISON) $(YFLAGS) -p lsl signature.y; \
 	  $(CAT) bison.head signature.tab.c bison.reset >signature.c; \
+	  $(CP) signature.c signature.c.der; \
 	  -$(MV) Headers/signature_gen.h Headers/signature_gen.bak; \
 	  $(CAT) bison.head signature.tab.h bison.reset >Headers/signature_gen.h; \
 	  $(RM) signature.tab.c signature.tab.h; \
@@ -825,6 +980,7 @@ Headers/cgrammar_tokens.h cgrammar.c: cgrammar.c.der cgrammar.y
 	  echo '* (see cgrammar.y for explanation)'; \
 	  $(BISON) $(YFLAGS) cgrammar.y; \
 	  $(CAT) bison.head cgrammar.tab.c bison.reset >cgrammar.c; \
+	  $(CP) cgrammar.c cgrammar.c.der; \
 	  -$(MV) Headers/cgrammar_tokens.h Headers/cgrammar_tokens.bak; \
 	  $(CAT) bison.head cgrammar.tab.h bison.reset >Headers/cgrammar_tokens.h; \
 	  $(RM) cgrammar.tab.c cgrammar.tab.h; \
@@ -849,6 +1005,7 @@ Headers/llgrammar_gen.h Headers/llgrammar_gen2.h llgrammar.c: llgrammar.c.der ll
 	  echo '* Expect 2 shift/reduce conflicts'; \
 	  $(BISON) $(YFLAGS) -p yl llgrammar.y; \
 	  $(CAT) bison.head llgrammar.tab.c bison.reset >llgrammar.c; \
+	  $(CP) llgrammar.c llgrammar.c.der; \
 	  -$(MV) Headers/llgrammar_gen2.h Headers/llgrammar_gen2.bak; \
 	  $(CAT) bison.head llgrammar.tab.h bison.reset >Headers/llgrammar_gen2.h; \
 	  0$(MV) Headers/llgrammar_gen.h Headers/llgrammar_gen.bak; \
