--- a/imports/Makefile
+++ b/imports/Makefile
@@ -57,21 +57,30 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 host_alias = 
 host_triplet = i686-pc-linux-gnu
+AMTAR = ${SHELL} /home/drl7x/LCLintDev/config/missing --run tar
+AWK = gawk
 BISON = bison
 CAT = cat
 CC = gcc
 CP = cp
 CPP = gcc -E
 CXX = g++
+DEPDIR = .deps
 DIFF = diff
+EXEEXT = 
 GREP = grep
+INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
 LCLOBJ = $(lcl_OBJECTS)
 LEX = flex
 LN_S = ln -s
 MV = mv
+OBJEXT = o
 PACKAGE = lclint
 RM = rm
 VERSION = 3.0.0.19
+am__include = include
+am__quote = 
+install_sh = /home/drl7x/LCLintDev/config/install-sh
 
 AUTOMAKE_OPTIONS = 1.5 foreign
 
